--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
+__pycache__/
+*.py[cod]
+*$py.class
+
 .DS_Store
-applet
-application.linux-arm64
-application.linux-armv6hf
-application.linux32
-application.linux64
-application.windows32
-application.windows64
-application.macosx
-out
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+.~lock*
